--- a/index.css
+++ b/index.css
@@ -7,3 +7,11 @@
 #skillset {
   text-align: center;
 }
+
+#overview-heading {
+  text-align: center;
+}
+
+#description-heading {
+  text-align: center;
+}
