Projects and Styling

--- a/index.css
+++ b/index.css
@@ -8,10 +8,6 @@
   text-align: center;
 }
 
-#overview-heading {
-  text-align: center;
-}
-
-#description-heading {
+#section-heading {
   text-align: center;
 }
